samples/_failures_safe/1761635529_de57e7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cf62f6b2.c: In function ‘main’:
./samples/SAFE/__tmp_cf62f6b2.c:166:5: error: expected expression at end of input
  166 |     if (len > 0 && input[len - 1] ==
      |     ^~
./samples/SAFE/__tmp_cf62f6b2.c:166:5: error: expected declaration or statement at end of input
